# hr_assistant

./: et --soft HEAD~1  pyproject.toml  requirements.txt
data/chromadb/b5c8c111-fe87-4d9d-997f-d12f149fccd8/: index_metadata.pickle
src/selfwork_hr_assistant/: __init__.py  config.py  database.py
