[project]
name = "selfwork-hr-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Luca Bozzali",email = "“lucathebozza@gmail.com”"}
]
readme = "README.md"
requires-python = "<3.14.0,>=3.10"
dependencies = [
    "chromadb (>=1.5.9,<2.0.0)",
    "openai (>=2.41.1,<3.0.0)",
    "chainlit (>=2.11.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "selfwork_hr_assistant", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
